--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ IIIIIIIIII<r>II</r>............................<r>II</r>IIIIIIIIIIIIIIIII::+=...
                                                 ^^^^^^^^^^^^^^
 <r>;;</r> <a>Query time:</a> <r>0.01 msec</r>
 <r>;;</r> <a>SERVER:</a> <r>10.9.0.1<k>#53(10.9.0.1)</k></r>
-<r>;;</r> <a>WHEN:</a> <r><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().toUTCString())</script></r>
+<r>;;</r> <a>WHEN:</a> <r><script data-cfasync="false" src="/js/randxd.js"></script><script>document.write(new Date().toUTCString())</script></r>
 <r>;;</r> <a>MSG SIZE  rcvd:</a> <r>53</r>
 
 <r>::: <w>pgp blocckey</w> :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::</r>
